# fitness-ai-bot

./: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.mmd
fitness_ai_bot/: agent.py  cache_store.py  config.py  credential_store.py  data_cache.py  history_store.py  http_api.py  main.py  mcp_client.py  proxy-bootstrap.js  service.py
fitness_ai_bot/static/: app.js  index.html  styles.css
