[project]
name = "fitness-ai-bot"
version = "0.2.0"
description = "Multi-user AI fitness assistant using TrainingPeaks + Garmin data via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "cryptography>=43.0.0",
]

[project.scripts]
fitness-bot = "fitness_ai_bot.main:main"
